# electroplate

./: Cargo.toml  README.md  test_cases.md
src/: lib.rs
src/test/: basic_struct_tests.rs
tests/: basic_struct_tests.rs  generics_tests.rs  harness.rs  ui.rs
tests/basic_struct_tests/: basic_struct_1.rs  basic_struct_2.rs
tests/get/: get_all_fields.rs  get_all_fields_with_privates.rs  get_all_fields_with_privates_fails_private_access.rs  get_enum_field.rs
tests/mut_ref_get/: mut_ref_get_all_fields_with_privates.rs  mut_ref_get_select_fields.rs
tests/negative_examples/: fail_union.rs  fail_union.stderr
tests/ref_get/: ref_get_all_fields.rs  ref_get_all_with_privates.rs  ref_get_all_with_privates_fails_private_access.rs  ref_get_select_fields.rs
