[package]
name = "electroplate"
description = "Configurable Derive macros to generate struct encapsulation methods"
version = "0.1.0"
edition = "2021"
keywords = ["encapsulation", "derive", "utilities", "oop"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.68"

[dev-dependencies]
trybuild = "1"
